[package]
name = "dbraft"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.68"
axum = "0.6.12"
futures = "0.3.27"
log = "0.4.17"
serde = { version = "1.0.158", features = ["derive"] }
serde_json = "1.0.94"
simple_logger = "4.1.0"
tokio = { version = "1.24.0", features = ["full"] }
tokio-stream = { verion = "0.1.12", features = ["net"] }
